--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Survey</title>
+        <title>Moon survey</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" type="image/x-icon" href="resources/moon.png">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap"> 
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <nav id="navbar">
-            <a href="#" class="icon"><span><img class="image-icon" src="https://freesvg.org/img/rg1024-Moon-in-comic-style.png" alt="Icon"></a>
+            <a href="#" class="icon"><span><img class="image-icon" src="resources/moon.png" alt="Icon"></a>
             <a href="#"><button class="navbar-button"><span>Sign up</span></button></a>
             <a href="#"><button class="navbar-button"><span>Log In</span></button></a>
         </nav>
